fix: feature help dialog icon alignment

--- a/src/dialogs/dialogs.css
+++ b/src/dialogs/dialogs.css
@@ -130,6 +130,14 @@
   fill: var(--bytm-ytm-only-note-col, #fff);
 }
 
+/* #region feature help dialog */
+
+#bytm-feat-help-dialog-header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
 /* #region welcome dialog */
 
 #bytm-welcome-menu-title-wrapper {
